--- a/style.css
+++ b/style.css
@@ -1,6 +1,58 @@
+button {
+  display: inline-block;
+  border-radius: 10px;
+  border: 4px double #cccccc;
+  color: #040404;
+  font-size: 14px;
+  padding: 5px;
+  width: 100px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+button span:after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+button:hover {
+  background-color: #cccccc;
+}
+button:hover span {
+  padding-right: 25px;
+}
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+.buttons-container{
+  display: flex;
+  justify-content: center;
+}
+
+.canvas-container{
+  display: flex;
+  justify-content: center;
+}
+
 canvas {
   border: 1px solid black;
   border-radius: 10px;
   border: 4px double #cccccc;
   background-color: rgb(241, 241, 236);
+
+  user-select: none; /* Disable text selection */
+  -webkit-user-select: none; /* Disable text selection in Chrome/Safari */
+  -moz-user-select: none; /* Disable text selection in Firefox */
+  -ms-user-select: none; /* Disable text selection in Internet Explorer/Edge */
 }
